--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@gadget-client/nu3": "link:.gadget/client",
     "@gadgetinc/react": "^0.21.3",
     "@gadgetinc/react-shopify-app-bridge": "^0.18.6",
+    "@google-cloud/bigquery": "^8.1.0",
     "@remix-run/node": "^2.15.3",
     "@remix-run/react": "^2.15.3",
     "@shopify/app-bridge-react": "^4.1.5",
